--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "route": "^0.2.5",
     "router": "^1.3.7",
     "vue": "^3.2.13",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "web3": "^1.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
