--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "route": "^0.2.5",
     "router": "^1.3.7",
     "vue": "^3.2.13",
+    "vue-metamask": "^2.2.1",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
