--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@metamask/sdk": "^0.0.1-beta.5",
     "core-js": "^3.8.3",
     "route": "^0.2.5",
     "router": "^1.3.7",
